--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "5.8.*|^6.0",
+        "illuminate/support": "5.8.*|^6.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.6",
